# GLMcoupling

./: README.md  TestBases.ipynb  ar_cca_demo.ipynb  pyproject.toml  simple_linear_demo.ipynb  simplest_linear_demo.ipynb
src/: GLPPM.py  __init__.py  basisFunctions.py  loadRGCdata.py
